Fix title and button collapse,Compress images

--- a/css/style.css
+++ b/css/style.css
@@ -269,6 +269,10 @@ header .logo {
 /* My Works */
 .container{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .work-img{
@@ -298,11 +302,7 @@ header .logo {
     position: absolute;
     color:var(--secondary-color);
     z-index: 2;
-    top: 25%;
-    vertical-align: middle;
     font-weight: 500;
-   
-    transform: translateY(100%);
     width:calc(100% - 30px);
     text-align: center;
     transition: top .5s ease;
@@ -318,6 +318,7 @@ header .logo {
     margin-top: 10px;
     opacity: 0;
     transition: opacity .5s ease;
+    margin-top: 25px;
     
 }
 
@@ -340,7 +341,7 @@ header .logo {
 }
 
 .container:hover .title{
-    top:15%;
+    top:25%;
     opacity: 1;
     color:#fff;
 }
@@ -450,6 +451,7 @@ header .logo {
         text-decoration: none;
         color: var(--secondary-color);
     }
+  
 
 }
 
@@ -461,6 +463,7 @@ header .logo {
     header .logo {
         margin-left: 5px;
     }
+ 
 }
 
 /* media qurey*/
